# CI-CD-and-Github-action

./: README.md
.github/workflow/: ex2.yml
.github/workflows/: ex2-yaml-content.yml  ex3-docker.yml  ex4-docker-comp.yml  ex5-pyenv-poetry.yml
ex3-docker/: Dockerfile  app.py
ex4-docker-compose/: Dockerfile  docker-compose.yml
ex5-pyenv-poertry/: pyproject.toml
ex5-pyenv-poetry/: .pre-commit-config.yaml  pyproject.toml
